<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textNoResponseHeader"
        style="@style/textPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/no_response_header"
        android:textColor="?attr/colorStandardText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/textNoResponseDescription"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textNoResponseDescription"
        style="@style/textPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/no_response_description"
        android:textColor="?attr/colorStandardText"
        app:layout_constraintBottom_toTopOf="@id/textLikeButtonNoResponseTryAgain"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textLikeButtonNoResponseTryAgain"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textYouSendSoManyRequests"
        style="@style/textSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/amount_attempts_to_server_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLikeButtonNoResponseTryAgain" />
</androidx.constraintlayout.widget.ConstraintLayout>