<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NoSubgroupsForGradeActivity">

    <TextView
        android:id="@+id/textNoSubgroupsForGradeHeader"
        style="@style/textNoResponseHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_response_header"
        app:layout_constraintBottom_toTopOf="@+id/textNoSubgroupsForGradeDescription"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/textNoSubgroupsForGradeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/no_subgroups_for_grade_description"
        app:layout_constraintBottom_toTopOf="@+id/buttonPickGradeOrSchoolAgain"
        style="@style/textSecondary"/>

    <Button
        android:id="@+id/buttonPickGradeOrSchoolAgain"
        style="@style/button_rectangle_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_grade_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>